description 'The Jadex desktop webservice platform extension package contains functionality for using and providing WSDL web services and REST web services. It uses dependencies which are only available for Java SE.'

sourceCompatibility	= 1.8

dependencies
{
	api project(':platform:base')
	api project(':kernels:component')
	api project(':platform:webservice')
	api project(':serialization:json')

	api 'javax.ws.rs:javax.ws.rs-api:2.0'

	api 'javassist:javassist:3.12.1.GA'
	api 'javax.servlet:javax.servlet-api:3.1.0'
	//api 'javax.websocket:javax.websocket-api:1.1'
	
	// Needed for Java 11+
	//implementation 'javax.xml.bind:jaxb-api:2.3.0'
	implementation 'javax.xml.ws:jaxws-api:2.3.0'
	implementation 'javax.jws:javax.jws-api:1.1'

	testImplementation 'org.glassfish.jersey.core:jersey-client:2.26'
	testImplementation 'org.glassfish.jersey.inject:jersey-hk2:2.26'

}
